Initial commit: Home Assistant custom component for SOLEM BLE controllers (Solem Toolkit Plus)
- Custom integration for SOLEM BLE irrigation controllers (LR-IP, BL-IP, etc.)
- Native support for Home Assistant:
    - BLE auto-discovery (Company ID 0x079E, 1950 decimal)
    - Switch entity for irrigation control
    - Sensor entity for battery level
    - Config flow (manual or auto-discovered MAC)
- All code, docs, and UI in English
- Ready for manual install and HACS integration
- Inspired by @hcraveiro/Home-Assistant-Solem-Toolkit, refactored and improved by Loïc V (playm8)

--- a/custom_components/solem_toolkit_plus/manifest.json
+++ b/custom_components/solem_toolkit_plus/manifest.json
@@ -1,13 +1,20 @@
 {
   "domain": "solem_toolkit_plus",
   "name": "Solem Toolkit Plus",
-  "version": "1.1.0",
-  "documentation": "https://github.com/playm8/home-assistant-solem-plus",
-  "issue_tracker": "https://github.com/playm8/home-assistant-solem-plus/issues",
-  "dependencies": [],
-  "codeowners": ["@playm8", "@hcraveiro"],
-  "requirements": [
-    "dbus_fast>=2.33.0",
-    "bleak>=0.22.3"
-  ]
+  "version": "0.1.1",
+  "iot_class": "local_polling",
+
+  /* BLE: Home Assistant will auto-discover any BLE advertisement
+     whose Manufacturer Specific Data starts with Company ID 0x079E
+     (decimal 1950 = SOLEM Électronique) */
+  "bluetooth": [
+    {
+      "manufacturer_id": 0x079E,
+      "transport": "local"
+    }
+  ],
+
+  "config_flow": true,
+  "codeowners": ["@your_github"],
+  "requirements": []
 }
