HACS compliance: clean up manifest.json, set version and codeowners
- Removed non-standard comments from manifest.json (pure JSON, no /* ... */)
- Set manufacturer_id to decimal (1950) for Bluetooth auto-discovery
- Updated codeowners field with actual GitHub handle (@playm8)
- Confirmed that the version field is present and matches the release tag
- Prepares the integration for use as a custom repository in HACS

--- a/custom_components/solem_toolkit_plus/manifest.json
+++ b/custom_components/solem_toolkit_plus/manifest.json
@@ -3,18 +3,13 @@
   "name": "Solem Toolkit Plus",
   "version": "0.1.1",
   "iot_class": "local_polling",
-
-  /* BLE: Home Assistant will auto-discover any BLE advertisement
-     whose Manufacturer Specific Data starts with Company ID 0x079E
-     (decimal 1950 = SOLEM Électronique) */
   "bluetooth": [
     {
-      "manufacturer_id": 0x079E,
+      "manufacturer_id": 1950,
       "transport": "local"
     }
   ],
-
   "config_flow": true,
-  "codeowners": ["@your_github"],
+  "codeowners": ["@playm8"],
   "requirements": []
 }
