Support Nordic manufacturer ID (0x0059) used in LR-IP BLE adverts
- Added manufacturer_id 89 (0x0059) to manifest.json so HA auto-discovers LR-IP devices.
- Keeps 0x079E for future devices that might broadcast under Solem’s own company ID.

--- a/custom_components/solem_toolkit_plus/manifest.json
+++ b/custom_components/solem_toolkit_plus/manifest.json
@@ -4,10 +4,8 @@
   "version": "0.1.1",
   "iot_class": "local_polling",
   "bluetooth": [
-    {
-      "manufacturer_id": 1950,
-      "transport": "local"
-    }
+  { "manufacturer_id": 1950, "transport": "local" }, 
+  { "manufacturer_id": 89,   "transport": "local" }  
   ],
   "config_flow": true,
   "codeowners": ["@playm8"],
